--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://kit.fontawesome.com/301ef6ca35.js" crossorigin="anonymous"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Borel&family=Bricolage+Grotesque&family=Dancing+Script:wght@700&family=Lato&family=Montserrat:wght@300&family=Mulish:wght@300&family=Pacifico&family=Poppins:wght@300&display=swap" rel="stylesheet">
+
 
 
     <meta name="theme-color" content="#000000" />
